# constitutional-ai-kit

./: README.llm  README.md  index.html  launch_gui.py  pyproject.toml
configs/: defaults.json
examples/: README.md
examples/basic_single_turn/: README.md  run.py
examples/constitution_variants/: README.md  run.py
examples/history_management/: README.md  run.py
examples/model_variants/: README.md  run.py
examples/parallel_mode/: README.md  run.py
src/constitutional_ai/: __init__.py  __main__.py  cli.py  client.py  config.py  engine.py  models.py  server.py  utils.py
src/constitutional_ai/static/: __init__.py  app.js  index.html
